--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.2.0",
+		"socket.io": "^3.0.4",
+		"socket.io-client": "^3.0.4",
 		"uuid": "^8.3.2"
 	}
 }
